--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 
-  <div class="form-box shadow-sm" style="width: 30%;">
+  <div class="form-box shadow-sm">
 
       <h4 class="mb-4 fw-bold text-center">Điểm danh sinh viên</h4>
 
